--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <ol style="list-style-type: upper-roman;">
             
             <li style="color: blue; font-weight: bold;"> Blueberry</li>
-            <button style="width: 30px;"> click me</button>
+            <button style="width: 150px;height: 50px;"> click me</button>
             <li style="color: yellowgreen; font-weight: bold;">     Banana</li>
             <li style="color: aquamarine; font-weight: bolder;">Grape</li>
             <li style="color: brown; font-weight: bold;">apple</li>
